Bug 371400 - Umbrello does not import c++ datatype references
Summary: Umbrello does not import c++ datatype references
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.18.3 (KDE Applications 15.12.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 371274
  Show dependency treegraph
 
Reported: 2016-10-21 07:47 UTC by Ralf Habacker
Modified: 2016-10-21 07:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.3 (KDE Applications 16.08.03)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-10-21 07:47:41 UTC
Importing c++ code having a datatype reference e.g. 

namespace ANameSpace {
   typedef int&  someType;
}

fails to import the reference.

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. import test case


Actual Results:  
The imported datatype references 'int'.

Expected Results:  
The imported datatype should  reference 'int&'.
Comment 1 Ralf Habacker 2016-10-21 07:51:52 UTC
Git commit 371b78c2d2cfffe78a5a9440ef0e56bed3180fa0 by Ralf Habacker.
Committed on 21/10/2016 at 07:51.
Pushed by habacker into branch 'Applications/16.08'.

Fix 'Umbrello does not import c++ datatype references'.
FIXED-IN:2.20.3 (KDE Applications 16.08.03)

M  +1    -1    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp

http://commits.kde.org/umbrello/371b78c2d2cfffe78a5a9440ef0e56bed3180fa0