Fix 'Umbrello does not import c++ datatype references'.

BUG:371400
FIXED-IN:2.20.3 (KDE Applications 16.08.03)